--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180814 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180814 Trench segmentation.ipynb
@@ -136,12 +136,12 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"05:00:00\",\n",
+    "    walltime=\"06:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"3GB\",\n",
+    "    memory=\"1GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
@@ -149,6 +149,25 @@
     "    env_extra=['export PYTHONPATH=\"/home/jqs1/projects/matriarch\"'],\n",
     ")\n",
     "client = Client(cluster, direct_to_workers=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scale(600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster._widget().children[1].children[1].children[0].children[0].layout.width = \"200px\"\n",
+    "cluster"
    ]
   },
   {
@@ -168,16 +187,6 @@
    "outputs": [],
    "source": [
     "cluster.adapt(minimum=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster._widget().children[1].children[1].children[0].children[0].layout.width = \"200px\"\n",
-    "cluster"
    ]
   },
   {
@@ -684,7 +693,7 @@
    "outputs": [],
    "source": [
     "# frames_to_analyze = all_frames.loc[IDX[:,:1,['MCHERRY','YFP'],1:5],:]\n",
-    "frames_to_analyze = all_frames.loc[IDX[:, :, [\"MCHERRY\", \"YFP\"], :], :]"
+    "frames_to_analyze = all_frames.loc[IDX[:, :100, [\"MCHERRY\", \"YFP\"], :], :]"
    ]
   },
   {
@@ -706,6 +715,15 @@
    "outputs": [],
    "source": [
     "client.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scale(500)"
    ]
   },
   {
@@ -772,7 +790,7 @@
     "\n",
     "stream_sinks = {}\n",
     "stream_writers = {}\n",
-    "output_filename = \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream8_{}.arrow\"\n",
+    "output_filename = \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream10_{}.arrow\"\n",
     "\n",
     "new_futures_stream.sink(lambda x: ac.add(x))\n",
     "\n",
@@ -782,39 +800,59 @@
     "\n",
     "\n",
     "def timeout_func(futures):\n",
-    "    print(\"timed out, adding to as_completed...\")\n",
     "    ac.update(futures)\n",
-    "    print(\"   ...ADDED\")\n",
     "\n",
     "\n",
-    "successful_futures = finished_futures_stream.filter(lambda x: x.status == \"finished\")\n",
-    "# batched_futures = successful_futures.rate_limit(0.0004).timed_window(1)\n",
-    "# gathered_futures = streamz.buffer(batched_futures, 10).gather_and_cancel(client=client, cancel=True)\n",
-    "# batched_futures = successful_futures.timed_window(1)\n",
-    "batched_futures = successful_futures.rate_limit(0.004).timed_window(1)\n",
-    "buffered_futures = streamz.buffer(batched_futures, 100)\n",
-    "gathered_futures = buffered_futures.gather_and_cancel(\n",
-    "    client=client, cancel=True, timeout=5, timeout_func=timeout_func\n",
+    "successful_futures_stream = finished_futures_stream.filter(\n",
+    "    lambda x: x.status == \"finished\"\n",
     ")\n",
-    "gathered_futures.flatten().sink(\n",
-    "    partial(\n",
-    "        workflow.sink_to_arrow,\n",
-    "        sinks=stream_sinks,\n",
-    "        writers=stream_writers,\n",
-    "        output_func=lambda i: pa.OSFile(output_filename.format(i), \"w\"),\n",
-    "    )\n",
+    "# batched_futures_stream = successful_futures_stream.rate_limit(0.0004).timed_window(1)\n",
+    "# gathered_futures_stream = streamz.buffer(batched_futures_stream, 10).gather_and_cancel(client=client, cancel=True)\n",
+    "# batched_futures_stream = successful_futures_stream.timed_window(1)\n",
+    "batched_futures_stream = successful_futures_stream.rate_limit(0.001).timed_window(1)\n",
+    "buffered_futures_stream = streamz.buffer(batched_futures_stream, 10)\n",
+    "\n",
+    "cancelled_futures = set()\n",
+    "gathered_futures_stream = buffered_futures_stream.gather_and_cancel(\n",
+    "    client=client,\n",
+    "    cancel=True,\n",
+    "    timeout=0.8,\n",
+    "    timeout_func=timeout_func,\n",
+    "    success_func=cancelled_futures.update,\n",
     ")\n",
+    "# gathered_futures_stream.flatten().sink(partial(workflow.sink_to_arrow, sinks=stream_sinks, writers=stream_writers, output_func=lambda i: pa.OSFile(output_filename.format(i), 'w')))\n",
+    "write_failures = []\n",
+    "flattened_futures_stream = gathered_futures_stream.flatten()\n",
+    "writer_stream = (\n",
+    "    flattened_futures_stream  # .timed_window(10).map(lambda x: list(zip(*x)))\n",
+    ")\n",
+    "sink_func = partial(\n",
+    "    workflow.sink_to_arrow,\n",
+    "    sinks=stream_sinks,\n",
+    "    writers=stream_writers,\n",
+    "    output_func=lambda i: pa.OSFile(output_filename.format(i), \"w\"),\n",
+    ")\n",
+    "# sink_func = partial(client.loop.run_in_executor, None, sink_func)\n",
+    "# writer_stream.with_timeout(timeout=3, retries=2, failure_func=write_failures.append).sink(sink_func)\n",
+    "# writer_stream.sink(sink_func)\n",
+    "stored_data = writer_stream.sink_to_list()\n",
     "\n",
     "# finished_futures_stream.sink(excepts(StopIteration, lambda x: new_futures_stream.emit(next(analysis_futures_iter)) if should_add_task()))\n",
     "# new_futures_stream.sink_to_list()\n",
     "all_futures = set()\n",
+    "finished_futures = set()\n",
     "new_futures_stream.sink(lambda x: all_futures.add(x))\n",
+    "successful_futures_stream.sink(lambda x: finished_futures.add(x))\n",
     "\n",
     "TASK_BUFFER_SIZE = 1000\n",
     "\n",
     "\n",
     "def should_add_task():\n",
-    "    return len([f for f in all_futures if f.status == \"pending\"]) < TASK_BUFFER_SIZE\n",
+    "    # return len([f for f in all_futures if f.status == 'pending'])\n",
+    "    # return TASK_BUFFER_SIZE > len(all_futures - finished_futures)\n",
+    "    return TASK_BUFFER_SIZE > len(all_futures - cancelled_futures)\n",
+    "    # print('>',len(all_futures - finished_futures))\n",
+    "    # return True\n",
     "\n",
     "\n",
     "def readd_task(x):\n",
@@ -838,7 +876,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(cluster.running_jobs)"
+    "len(stored_data)"
    ]
   },
   {
@@ -847,7 +885,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gather_task"
+    "gather_task.cancel()\n",
+    "client.cancel(all_futures)"
    ]
   },
   {
@@ -856,7 +895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gathered_futures.upstream.queue._queue = []"
+    "all_futures"
    ]
   },
   {
@@ -865,7 +904,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ac.update([f for f in all_futures if f.status == \"pending\"])"
+    "finished_futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "successful_futures_stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_futures_stream.emit(next(analysis_futures_iter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = client.loop.run_in_executor(None, lambda x: time.sleep(x), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(stored_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(write_failures)"
    ]
   },
   {
@@ -875,15 +959,6 @@
    "outputs": [],
    "source": [
     "len(all_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errored_futures[0].result()"
    ]
   },
   {
@@ -902,6 +977,15 @@
    "outputs": [],
    "source": [
     "len(all_futures) / len(frames_to_analyze)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(cancelled_futures)"
    ]
   },
   {
