WIP memory leak hunting.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180815 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180815 Trench segmentation.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext line_profiler\n",
+    "#%load_ext line_profiler\n",
     "hv.extension(\"bokeh\")\n",
     "%matplotlib inline\n",
     "tqdm.monitor_interval = 0\n",
@@ -134,19 +134,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dask.config.config[\"distributed\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask.config.config[\"distributed\"][\"worker\"][\"profile\"] = {\n",
+    "    \"interval\": \"10000s\",\n",
+    "    \"cycle\": \"10000s\",\n",
+    "}\n",
+    "# {'interval': '10ms', 'cycle': '1000ms'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"06:00:00\",\n",
+    "    walltime=\"01:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"1GB\",\n",
+    "    memory=\"10GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
-    "    env_extra=['export PYTHONPATH=\"/home/jqs1/projects/matriarch\"'],\n",
+    "    env_extra=[\n",
+    "        'export PYTHONPATH=\"/home/jqs1/projects/matriarch\"',\n",
+    "        \"export PYTHONTRACEMALLOC=25\",\n",
+    "    ],\n",
     ")\n",
     "client = Client(cluster, direct_to_workers=True)"
    ]
@@ -157,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(600)"
+    "cluster.scale(1)"
    ]
   },
   {
@@ -206,6 +231,15 @@
    "source": [
     "cluster.scheduler.stop_services()\n",
     "cluster.scheduler.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.restart()"
    ]
   },
   {
@@ -711,7 +745,7 @@
    "outputs": [],
    "source": [
     "# frames_to_analyze = all_frames.loc[IDX[:,:1,['MCHERRY','YFP'],1:5],:]\n",
-    "frames_to_analyze = all_frames.loc[IDX[:, :100, [\"MCHERRY\", \"YFP\"], :], :]"
+    "frames_to_analyze = all_frames.loc[IDX[:, :1, [\"MCHERRY\", \"YFP\"], :], :]"
    ]
   },
   {
@@ -741,7 +775,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "labelwise_funcs = {\n",
     "    \"mean\": np.mean,\n",
     "    \"min\": np.min,\n",
@@ -761,11 +794,13 @@
     "    regionprops=True,\n",
     "    segment_func=trench_segmentation.watershed.segment_trench,\n",
     ")\n",
-    "analyze_trench_func = compose(\n",
-    "    list, partial(map, pa.RecordBatch.from_pandas), analyze_trench_func\n",
-    ")\n",
+    "# analyze_trench_func = compose(list, partial(map, pa.RecordBatch.from_pandas), analyze_trench_func)\n",
     "\n",
-    "analyze_trench_func = partial(client.submit, analyze_trench_func, retries=2)\n",
+    "analyze_trench_func = partial(client.submit, analyze_trench_func, retries=0)\n",
+    "\n",
+    "analysis_futures_iter = workflow.analyze_frames_and_trenches_iter(\n",
+    "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
+    ")\n",
     "\n",
     "# analysis_futures = workflow.analyze_frames_and_trenches(selected_trenches_segmentation,\n",
     "#                                            frames_to_analyze,\n",
@@ -788,10 +823,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "analysis_futures_iter = workflow.analyze_frames_and_trenches_iter(\n",
-    "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
-    ")\n",
-    "\n",
     "ac = distributed.as_completed([], with_results=False, loop=client.loop)\n",
     "\n",
     "new_futures_stream = streamz.Stream()\n",
@@ -854,20 +885,25 @@
     "new_futures_stream.sink(lambda x: all_futures.add(x))\n",
     "successful_futures_stream.sink(lambda x: finished_futures.add(x))\n",
     "\n",
-    "TASK_BUFFER_SIZE = 10  # 1000\n",
+    "TASK_BUFFER_SIZE = 3\n",
     "\n",
+    "# def should_add_task():\n",
+    "#     #return len([f for f in all_futures if f.status == 'pending'])\n",
+    "#     #return TASK_BUFFER_SIZE > len(all_futures - finished_futures)\n",
+    "#     return TASK_BUFFER_SIZE > len(all_futures - cancelled_futures)\n",
+    "#     #print('>',len(all_futures - finished_futures))\n",
+    "#     #return True\n",
     "\n",
-    "def should_add_task():\n",
-    "    # return len([f for f in all_futures if f.status == 'pending'])\n",
-    "    # return TASK_BUFFER_SIZE > len(all_futures - finished_futures)\n",
-    "    return TASK_BUFFER_SIZE > len(all_futures - cancelled_futures)\n",
-    "    # print('>',len(all_futures - finished_futures))\n",
-    "    # return True\n",
+    "# def readd_task(x):\n",
+    "#     if should_add_task():\n",
+    "#         return new_futures_stream.emit(next(analysis_futures_iter))\n",
     "\n",
     "\n",
     "def readd_task(x):\n",
-    "    if should_add_task():\n",
-    "        return new_futures_stream.emit(next(analysis_futures_iter))\n",
+    "    num_tasks_needed = TASK_BUFFER_SIZE - len(all_futures - cancelled_futures)\n",
+    "    if num_tasks_needed > 0:\n",
+    "        for future in take(num_tasks_needed, analysis_futures_iter):\n",
+    "            new_futures_stream.emit(future)\n",
     "\n",
     "\n",
     "finished_futures_stream.sink(excepts(StopIteration, readd_task))\n",
@@ -878,6 +914,16 @@
     "\n",
     "gather_func = workflow.gather_stream(finished_futures_stream, ac)\n",
     "gather_task = client.loop.asyncio_loop.create_task(gather_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gather_task.cancel()\n",
+    "client.cancel(all_futures)"
    ]
   },
   {
@@ -893,7 +939,210 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pympler import muppy, tracker, summary, refbrowser"
+    "from pympler import muppy, tracker, summary, refbrowser\n",
+    "import tracemalloc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshots3 = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "def start_tracemalloc():\n",
+    "    import tracemalloc\n",
+    "\n",
+    "    tracemalloc.start(10)\n",
+    "\n",
+    "\n",
+    "client.run(start_tracemalloc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "def memory_snapshot():\n",
+    "    import tracemalloc\n",
+    "\n",
+    "    return tracemalloc.take_snapshot()\n",
+    "\n",
+    "\n",
+    "snapshots3.append(client.run(memory_snapshot))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(finished_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshots3[-1].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k = 'tcp://10.120.16.191:53503'\n",
+    "k = \"tcp://10.120.16.244:52833\"\n",
+    "s1 = snapshots3[-2][k]\n",
+    "s2 = snapshots3[-1][k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcgc():\n",
+    "    import gc\n",
+    "\n",
+    "    gc.collect()\n",
+    "\n",
+    "\n",
+    "client.run(gcgc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stats = s2.statistics('lineno')[:10]\n",
+    "stats = s2.statistics(\"lineno\")[:10]\n",
+    "# stats = s2.compare_to(s1, 'lineno')[:20]\n",
+    "for stat in stats:\n",
+    "    print(stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = list(snapshots[0].values())\n",
+    "ss[0].compare_to(ss[1], \"traceback\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "def memory_func():\n",
+    "    from pympler import muppy, tracker, summary\n",
+    "\n",
+    "    return summary.summarize(muppy.get_objects())\n",
+    "\n",
+    "\n",
+    "mem3t5 = client.run(memory_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "def sample_memory_func():\n",
+    "    from pympler import muppy, tracker, summary\n",
+    "    import random\n",
+    "\n",
+    "    return random.sample(muppy.filter(muppy.get_objects(), Type=str), 10)\n",
+    "\n",
+    "\n",
+    "mem_objs_t3 = client.run(sample_memory_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pa_mem():\n",
+    "    import pyarrow as pa\n",
+    "\n",
+    "    return pa.total_allocated_bytes()\n",
+    "\n",
+    "\n",
+    "client.run(pa_mem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary.print_(mem3t5[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicts = muppy.filter(all_objects, Type=dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mem1.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mems = list(mem2r2.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary.print_(mems[30])"
    ]
   },
   {
@@ -912,6 +1161,17 @@
    "outputs": [],
    "source": [
     "memory_tracker.print_diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "list(take(100, analysis_futures_iter))\n",
+    "None"
    ]
   },
   {
@@ -2184,7 +2444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
