WIP memory leak hunting.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180816 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180816 Trench segmentation.ipynb
@@ -163,14 +163,17 @@
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"10GB\",\n",
+    "    memory=\"4GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=[\n",
     "        'export PYTHONPATH=\"/home/jqs1/projects/matriarch\"',\n",
-    "        \"export PYTHONTRACEMALLOC=25\",\n",
+    "        #'export PYTHONTRACEMALLOC=25',\n",
+    "        #'export MALLOC_CONF=prof_leak:true,lg_prof_interval:26,prof_gdump:true,prof_final:true'\n",
+    "        \"export MALLOC_CONF=prof:true,prof_leak:true,lg_prof_interval:28,prof_final:true\",\n",
+    "        'export LD_PRELOAD=\"/home/jqs1/lib/libjemalloc.so.2\"',\n",
     "    ],\n",
     ")\n",
     "client = Client(cluster, direct_to_workers=True)"
@@ -758,15 +761,6 @@
     "    len(frames_to_analyze),\n",
     "    len(all_frames.loc[IDX[:, :, [\"MCHERRY\", \"YFP\"], :], :]) / len(frames_to_analyze),\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
    ]
   },
   {
