Working streaming gather with 400 workers.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180816.2 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180816.2 Trench segmentation.ipynb
@@ -167,12 +167,12 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"02:00:00\",\n",
+    "    walltime=\"09:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"4GB\",\n",
+    "    memory=\"1GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
@@ -180,8 +180,7 @@
     "    env_extra=[\n",
     "        'export PYTHONPATH=\"/home/jqs1/projects/matriarch\"',\n",
     "        #'export PYTHONTRACEMALLOC=25',\n",
-    "        #'export MALLOC_CONF=prof_leak:true,lg_prof_interval:26,prof_gdump:true,prof_final:true'\n",
-    "        \"export MALLOC_CONF=prof:true,prof_leak:true,lg_prof_interval:31,prof_final:true\",\n",
+    "        #'export MALLOC_CONF=prof:true,prof_leak:true,lg_prof_interval:31,prof_final:true',\n",
     "        'export LD_PRELOAD=\"/home/jqs1/lib/libjemalloc.so.2\"',\n",
     "    ],\n",
     ")\n",
@@ -194,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(1)"
+    "cluster.scale(400)"
    ]
   },
   {
@@ -223,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.adapt(minimum=10)"
+    "# cluster.adapt(minimum=10,maximum=200)"
    ]
   },
   {
@@ -297,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client"
+    "client = Client(cluster)"
    ]
   },
   {
@@ -767,7 +766,7 @@
    "outputs": [],
    "source": [
     "# frames_to_analyze = all_frames.loc[IDX[:,:1,['MCHERRY','YFP'],1:5],:]\n",
-    "frames_to_analyze = all_frames.loc[IDX[:, :10, [\"MCHERRY\", \"YFP\"], :], :]"
+    "frames_to_analyze = all_frames.loc[IDX[:, :, [\"MCHERRY\", \"YFP\"], :], :]"
    ]
   },
   {
@@ -780,36 +779,6 @@
     "    len(frames_to_analyze),\n",
     "    len(all_frames.loc[IDX[:, :, [\"MCHERRY\", \"YFP\"], :], :]) / len(frames_to_analyze),\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ary = workflow.get_nd2_frame(\n",
-    "    filename=nd2_filenames[0], channel=\"MCHERRY\", position=0, t=0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save(\"temp/test.npy\", ary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_reload()\n",
-    "client.run(do_reload)"
    ]
   },
   {
@@ -841,9 +810,9 @@
     "    list, partial(map, pa.RecordBatch.from_pandas), analyze_trench_func\n",
     ")\n",
     "\n",
-    "analyze_trench_func = compose(lambda x: None, analyze_trench_func)\n",
+    "# analyze_trench_func = compose(lambda x: None, analyze_trench_func)\n",
     "\n",
-    "analyze_trench_func = partial(client.submit, analyze_trench_func, retries=0)\n",
+    "analyze_trench_func = partial(client.submit, analyze_trench_func, retries=2)\n",
     "\n",
     "analysis_futures_iter = workflow.analyze_frames_and_trenches_iter(\n",
     "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
@@ -881,9 +850,10 @@
     "\n",
     "new_futures_stream.sink(lambda x: ac.add(x))\n",
     "\n",
-    "errored_futures = finished_futures_stream.filter(\n",
-    "    lambda x: x.status == \"error\"\n",
-    ").sink_to_list()\n",
+    "errored_futures = set()\n",
+    "finished_futures_stream.filter(lambda x: x.status == \"error\").sink(\n",
+    "    lambda x: errored_futures.add(x)\n",
+    ")\n",
     "\n",
     "\n",
     "def timeout_func(futures):\n",
@@ -896,15 +866,15 @@
     "# batched_futures_stream = successful_futures_stream.rate_limit(0.0004).timed_window(1)\n",
     "# gathered_futures_stream = streamz.buffer(batched_futures_stream, 10).gather_and_cancel(client=client, cancel=True)\n",
     "# batched_futures_stream = successful_futures_stream.timed_window(1)\n",
-    "batched_futures_stream = successful_futures_stream.rate_limit(0.001).timed_window(1)\n",
+    "batched_futures_stream = successful_futures_stream.rate_limit(0.001).timed_window(20)\n",
     "buffered_futures_stream = streamz.buffer(batched_futures_stream, 10)\n",
     "\n",
     "cancelled_futures = set()\n",
     "gathered_futures_stream = buffered_futures_stream.gather_and_cancel(\n",
     "    client=client,\n",
-    "    gather=False,\n",
+    "    gather=True,\n",
     "    cancel=True,\n",
-    "    timeout=0.8,\n",
+    "    timeout=8,\n",
     "    timeout_func=timeout_func,\n",
     "    success_func=cancelled_futures.update,\n",
     ")\n",
@@ -922,8 +892,8 @@
     ")\n",
     "# sink_func = partial(client.loop.run_in_executor, None, sink_func)\n",
     "# writer_stream.with_timeout(timeout=3, retries=2, failure_func=write_failures.append).sink(sink_func)\n",
-    "# writer_stream.sink(sink_func)\n",
-    "stored_data = writer_stream.sink_to_list()\n",
+    "writer_stream.sink(sink_func)\n",
+    "# stored_data = writer_stream.sink_to_list()\n",
     "\n",
     "# finished_futures_stream.sink(excepts(StopIteration, lambda x: new_futures_stream.emit(next(analysis_futures_iter)) if should_add_task()))\n",
     "# new_futures_stream.sink_to_list()\n",
@@ -932,7 +902,7 @@
     "new_futures_stream.sink(lambda x: all_futures.add(x))\n",
     "successful_futures_stream.sink(lambda x: finished_futures.add(x))\n",
     "\n",
-    "TASK_BUFFER_SIZE = 10\n",
+    "TASK_BUFFER_SIZE = 3000\n",
     "\n",
     "# def should_add_task():\n",
     "#     #return len([f for f in all_futures if f.status == 'pending'])\n",
@@ -947,7 +917,9 @@
     "\n",
     "\n",
     "def readd_task(x):\n",
-    "    num_tasks_needed = TASK_BUFFER_SIZE - len(all_futures - cancelled_futures)\n",
+    "    num_tasks_needed = TASK_BUFFER_SIZE - len(\n",
+    "        all_futures - cancelled_futures - errored_futures\n",
+    "    )\n",
     "    if num_tasks_needed > 0:\n",
     "        for future in take(num_tasks_needed, analysis_futures_iter):\n",
     "            new_futures_stream.emit(future)\n",
@@ -979,7 +951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(stored_data)"
+    "len(all_futures)"
    ]
   },
   {
@@ -988,7 +960,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "errored_futures[0].result()"
+    "errored_futures[-1].result()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Server profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from profiling.tracing import TracingProfiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = TracingProfiler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from profiling.sampling import SamplingProfiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = SamplingProfiler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.dump(\"temp/tracprof\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(p.result(), open(\"temp/statprof\", \"wb\"))"
    ]
   },
   {
